--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,22 @@ set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra")
 set(CMAKE_BUILD_TYPE Debug)
 
 find_package(Eigen3 3.3 REQUIRED)   # find Eigen
+find_package(VTK COMPONENTS
+    CommonColor
+    CommonCore
+    FiltersSources
+    IOImage
+    InteractionStyle
+    RenderingContextOpenGL2
+    RenderingCore
+    RenderingFreeType
+    RenderingGL2PSOpenGL2
+    RenderingOpenGL2
+)
+
+if (NOT VTK_FOUND)
+  message(FATAL_ERROR "Unable to find the VTK build folder.")
+endif()
 
 include_directories("./include")
 
@@ -15,4 +31,13 @@ target_link_libraries(Solver Eigen3::Eigen)
 
 add_executable(TestThomas test/test_thomas.cpp)
 target_link_libraries(TestThomas Solver Eigen3::Eigen)
+
+add_executable(TestVTK test/test_vtk.cpp)
+target_link_libraries(TestVTK Eigen3::Eigen ${VTK_LIBRARIES})
+
+# vtk_module_autoinit is needed
+vtk_module_autoinit(
+  TARGETS TestVTK
+  MODULES ${VTK_LIBRARIES}
+)
 
