Added XPBDRod class and created VTK mesh for it in test_vtk

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,11 +29,15 @@ add_library(Solver)
 add_subdirectory("src/solver")
 target_link_libraries(Solver Eigen3::Eigen)
 
+add_library(Rod)
+add_subdirectory("src/rod")
+target_link_libraries(Rod Eigen3::Eigen)
+
 add_executable(TestThomas test/test_thomas.cpp)
 target_link_libraries(TestThomas Solver Eigen3::Eigen)
 
 add_executable(TestVTK test/test_vtk.cpp)
-target_link_libraries(TestVTK Eigen3::Eigen ${VTK_LIBRARIES})
+target_link_libraries(TestVTK Eigen3::Eigen ${VTK_LIBRARIES} Rod)
 
 # vtk_module_autoinit is needed
 vtk_module_autoinit(
