Working simulation skeleton with VTK graphics

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,15 +33,31 @@ add_library(Rod)
 add_subdirectory("src/rod")
 target_link_libraries(Rod Eigen3::Eigen)
 
+add_library(Graphics)
+add_subdirectory("src/graphics")
+target_link_libraries(Graphics Eigen3::Eigen ${VTK_LIBRARIES} Rod)
+
+add_library(Simulation)
+add_subdirectory("src/simulation")
+target_link_libraries(Simulation Eigen3::Eigen ${VTK_LIBRARIES} Rod Solver Graphics)
+
 add_executable(TestThomas test/test_thomas.cpp)
 target_link_libraries(TestThomas Solver Eigen3::Eigen)
 
 add_executable(TestVTK test/test_vtk.cpp)
 target_link_libraries(TestVTK Eigen3::Eigen ${VTK_LIBRARIES} Rod)
 
+add_executable(RunSim src/exec/main.cpp)
+target_link_libraries(RunSim Simulation ${VTK_LIBRARIES})
+
 # vtk_module_autoinit is needed
 vtk_module_autoinit(
   TARGETS TestVTK
+  MODULES ${VTK_LIBRARIES}
+)
+
+vtk_module_autoinit(
+  TARGETS RunSim
   MODULES ${VTK_LIBRARIES}
 )
 
