--- a/src/graphics/CMakeLists.txt
+++ b/src/graphics/CMakeLists.txt
@@ -7,11 +7,13 @@ set(GRAPHICS_SRC_DIR "./")
 set(GRAPHICS_HEADERS
     ${GRAPHICS_INCLUDE_DIR}/RodGraphicsObject.hpp
     ${GRAPHICS_INCLUDE_DIR}/GraphicsScene.hpp
+    ${GRAPHICS_INCLUDE_DIR}/CustomVTKInteractorStyle.hpp
 )
 
 set(GRAPHICS_SOURCES
     ${GRAPHICS_SRC_DIR}/RodGraphicsObject.cpp
     ${GRAPHICS_SRC_DIR}/GraphicsScene.cpp
+    ${GRAPHICS_SRC_DIR}/CustomVTKInteractorStyle.cpp
 )
 
 target_sources(Graphics
