--- a/src/simulation/CMakeLists.txt
+++ b/src/simulation/CMakeLists.txt
@@ -6,10 +6,12 @@ set(SIMULATION_SRC_DIR "./")
 
 set(SIMULATION_HEADERS
     ${SIMULATION_INCLUDE_DIR}/Simulation.hpp
+    ${SIMULATION_INCLUDE_DIR}/RodGraspingSimulation.hpp
 )
 
 set(SIMULATION_SOURCES
     ${SIMULATION_SRC_DIR}/Simulation.cpp
+    ${SIMULATION_SRC_DIR}/RodGraspingSimulation.cpp
 )
 
 target_sources(Simulation
