Added config options for fixing the base and the tip of the rod

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -9,9 +9,11 @@ create-skybox: True
 rods:
   - 
     name: "rod1"
-    initial-base-position: [0, 0.1, -0.5]
+    initial-base-position: [0, 0.0, 0.0]
     initial-base-rotation: [0, 0, 0]
     nodes: 500
+    base-fixed: True
+    tip-fixed: True
     render-type: "PBR"
     # orm-texture-filename: "../resource/textures/Metal050A_4K-PNG/Metal050A_4K-PNG_ORM.png"
     # base-color-texture-filename: "../resource/textures/Metal050A_4K-PNG/Metal050A_4K-PNG_Color.png"
