--- a/config/pendulum_config.yaml
+++ b/config/pendulum_config.yaml
@@ -9,7 +9,8 @@ objects:
   - 
     type: "Pendulum"
     name: "pendulum"
-    num-bodies: 1
+    num-bodies: 2
+    initial-angle: 120
     render-type: "PBR"
     # orm-texture-filename: "../resource/textures/Metal050A_4K-PNG/Metal050A_4K-PNG_ORM.png"
     # base-color-texture-filename: "../resource/textures/Metal050A_4K-PNG/Metal050A_4K-PNG_Color.png"
