Added test to test constraint gradients

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -11,9 +11,9 @@ objects:
     name: "rod1"
     initial-base-position: [0, 0.0, 0.0]
     initial-base-rotation: [0, 0, 0]
-    nodes: 100
+    nodes: 500
     base-fixed: True
-    tip-fixed: True
+    tip-fixed: False
     render-type: "PBR"
     # orm-texture-filename: "../resource/textures/Metal050A_4K-PNG/Metal050A_4K-PNG_ORM.png"
     # base-color-texture-filename: "../resource/textures/Metal050A_4K-PNG/Metal050A_4K-PNG_Color.png"
