--- a/src/constraint/CMakeLists.txt
+++ b/src/constraint/CMakeLists.txt
@@ -7,14 +7,14 @@ set(CONSTRAINT_SRC_DIR "./")
 set(CONSTRAINT_HEADERS
     ${CONSTRAINT_INCLUDE_DIR}/Constraint.hpp
     ${CONSTRAINT_INCLUDE_DIR}/RodElasticConstraint.hpp
-    ${CONSTRAINT_INCLUDE_DIR}/AttachmentConstraint.hpp
+    ${CONSTRAINT_INCLUDE_DIR}/FixedJointConstraint.hpp
     ${CONSTRAINT_INCLUDE_DIR}/RevoluteJointConstraint.hpp
     ${CONSTRAINT_INCLUDE_DIR}/PointLineConstraint.hpp
 )
 
 set(CONSTRAINT_SOURCES
     ${CONSTRAINT_SRC_DIR}/RodElasticConstraint.cpp
-    ${CONSTRAINT_SRC_DIR}/AttachmentConstraint.cpp
+    ${CONSTRAINT_SRC_DIR}/FixedJointConstraint.cpp
     ${CONSTRAINT_SRC_DIR}/RevoluteJointConstraint.cpp
     ${CONSTRAINT_SRC_DIR}/PointLineConstraint.cpp
 )
