--- a/config/pendulum_config.yaml
+++ b/config/pendulum_config.yaml
@@ -1,6 +1,6 @@
 name: "Pendulum Sim"
 time-step: 1e-3
-end-time: 5
+end-time: 1000
 
 hdr-image-filename: "../resource/studio_1k.hdr"
 create-skybox: True
@@ -11,7 +11,7 @@ objects:
     name: "pendulum"
     num-bodies: 2
     initial-angle: 120
-    use-muller-2020: false
+    projector-type: "separate"
     render-type: "PBR"
     # orm-texture-filename: "../resource/textures/Metal050A_4K-PNG/Metal050A_4K-PNG_ORM.png"
     # base-color-texture-filename: "../resource/textures/Metal050A_4K-PNG/Metal050A_4K-PNG_Color.png"
