Started implementation of XPBDConcentricTubeRobot

--- a/config/pendulum_config.yaml
+++ b/config/pendulum_config.yaml
@@ -1,6 +1,6 @@
 name: "Pendulum Sim"
 time-step: 1e-3
-end-time: 1000
+end-time: 10e-3
 
 hdr-image-filename: "../resource/studio_1k.hdr"
 create-skybox: True
@@ -9,9 +9,9 @@ objects:
   - 
     type: "Pendulum"
     name: "pendulum"
-    num-bodies: 2
-    initial-angle: 80
-    projector-type: "separate"
+    num-bodies: 1
+    initial-angle: 60
+    projector-type: "block"
     render-type: "PBR"
     # orm-texture-filename: "../resource/textures/Metal050A_4K-PNG/Metal050A_4K-PNG_ORM.png"
     # base-color-texture-filename: "../resource/textures/Metal050A_4K-PNG/Metal050A_4K-PNG_Color.png"
