--- a/config/pendulum_config.yaml
+++ b/config/pendulum_config.yaml
@@ -1,6 +1,6 @@
 name: "Pendulum Sim"
 time-step: 1e-3
-end-time: 10e-3
+end-time: 100000e-3
 
 hdr-image-filename: "../resource/studio_1k.hdr"
 create-skybox: True
@@ -9,8 +9,8 @@ objects:
   - 
     type: "Pendulum"
     name: "pendulum"
-    num-bodies: 1
-    initial-angle: 60
+    num-bodies: 10
+    initial-angle: 100
     projector-type: "block"
     render-type: "PBR"
     # orm-texture-filename: "../resource/textures/Metal050A_4K-PNG/Metal050A_4K-PNG_ORM.png"
