--- a/src/simulation/CMakeLists.txt
+++ b/src/simulation/CMakeLists.txt
@@ -7,11 +7,15 @@ set(SIMULATION_SRC_DIR "./")
 set(SIMULATION_HEADERS
     ${SIMULATION_INCLUDE_DIR}/Simulation.hpp
     ${SIMULATION_INCLUDE_DIR}/RodGraspingSimulation.hpp
+
+    ${SIMULATION_INCLUDE_DIR}/SimulationLogger.hpp
 )
 
 set(SIMULATION_SOURCES
     ${SIMULATION_SRC_DIR}/Simulation.cpp
     ${SIMULATION_SRC_DIR}/RodGraspingSimulation.cpp
+
+    ${SIMULATION_SRC_DIR}/SimulationLogger.cpp
 )
 
 target_sources(Simulation
