--- a/config/pendulum_config.yaml
+++ b/config/pendulum_config.yaml
@@ -1,10 +1,10 @@
 name: "Pendulum Sim"
 time-step: 1e-3
-end-time: 100e-3
+end-time: 10
 
 logging: True
 logging-output-folder: "../output/pendulum"
-logging-interval: 1e-2
+logging-interval: 1e-1
 log-residuals: True
 
 
@@ -15,9 +15,9 @@ objects:
   - 
     type: "Pendulum"
     name: "pendulum"
-    num-bodies: 2
+    num-bodies: 1
     initial-angle: 100
-    projector-type: "separate"
+    projector-type: "block"
     render-type: "PBR"
     # orm-texture-filename: "../resource/textures/Metal050A_4K-PNG/Metal050A_4K-PNG_ORM.png"
     # base-color-texture-filename: "../resource/textures/Metal050A_4K-PNG/Metal050A_4K-PNG_Color.png"
