--- a/src/constraint/CMakeLists.txt
+++ b/src/constraint/CMakeLists.txt
@@ -12,6 +12,7 @@ set(CONSTRAINT_HEADERS
     ${CONSTRAINT_INCLUDE_DIR}/SphericalJointConstraint.hpp
     ${CONSTRAINT_INCLUDE_DIR}/PrismaticJointConstraint.hpp
     ${CONSTRAINT_INCLUDE_DIR}/RevoluteJointLimitConstraint.hpp
+    ${CONSTRAINT_INCLUDE_DIR}/SphericalJointSwingLimitConstraint.hpp
     ${CONSTRAINT_INCLUDE_DIR}/PointLineConstraint.hpp
 )
 
@@ -22,6 +23,7 @@ set(CONSTRAINT_SOURCES
     ${CONSTRAINT_SRC_DIR}/SphericalJointConstraint.cpp
     ${CONSTRAINT_SRC_DIR}/PrismaticJointConstraint.cpp
     ${CONSTRAINT_SRC_DIR}/RevoluteJointLimitConstraint.cpp
+    ${CONSTRAINT_SRC_DIR}/SphericalJointSwingLimitConstraint.cpp
     ${CONSTRAINT_SRC_DIR}/PointLineConstraint.cpp
 )
 
