--- a/config/collision_test/plane_box.yaml
+++ b/config/collision_test/plane_box.yaml
@@ -1,6 +1,6 @@
-name: "Plane-Sphere Collision"
-time-step: 1e-3
-end-time: 5
+name: "Plane-Box Collision"
+time-step: 1e-2
+end-time: 100
 
 hdr-image-filename: "../resource/studio_1k.hdr"
 create-skybox: True
@@ -9,8 +9,8 @@ objects:
   - 
     type: "RigidBox"
     name: "box1"
-    initial-position: [0, 2, 0.0]
-    initial-rotation: [40, 0, 0]
+    initial-position: [0, 3, 0.0]
+    initial-rotation: [40, 0, 10]
     size: [0.5,0.5,1]
     render-type: "PBR"
     # orm-texture-filename: "../resource/textures/Metal050A_4K-PNG/Metal050A_4K-PNG_ORM.png"
