--- a/src/simobject/CMakeLists.txt
+++ b/src/simobject/CMakeLists.txt
@@ -14,6 +14,7 @@ set(SIMOBJECT_HEADERS
 set(SIMOBJECT_SOURCES
     ${SIMOBJECT_SRC_DIR}/OrientedParticle.cpp
     ${SIMOBJECT_SRC_DIR}/rod/XPBDRod.cpp
+    ${SIMOBJECT_SRC_DIR}/rod/XPBDRodSegment.cpp
     ${SIMOBJECT_SRC_DIR}/XPBDObject_Base.cpp
     ${SIMOBJECT_SRC_DIR}/group/XPBDObjectGroup_Base.cpp
     ${SIMOBJECT_SRC_DIR}/group/XPBDConcentricTubeRobot.cpp
