--- a/config/collision_test/rod_rod.yaml
+++ b/config/collision_test/rod_rod.yaml
@@ -10,10 +10,29 @@ objects:
   - 
     type: "Rod"
     name: "rod1"
-    initial-position: [0, 1, 0.0]
+    initial-position: [-0.1, 1, 0.0]
     initial-rotation: [0, 0, 0]
-    nodes: 15
-    E: 1e6
+    nodes: 20
+    E: 1e5
+    diameter: 0.1
+    length: 1
+    nu: 0.3
+    base-fixed: True
+    tip-fixed: True
+    render-type: "PBR"
+    # orm-texture-filename: "../resource/textures/Metal050A_4K-PNG/Metal050A_4K-PNG_ORM.png"
+    # base-color-texture-filename: "../resource/textures/Metal050A_4K-PNG/Metal050A_4K-PNG_Color.png"
+    metallic: 0.2
+    roughness: 0.5
+    color: [1.0, 1.0, 1.0]
+
+  - 
+    type: "Rod"
+    name: "rod1"
+    initial-position: [0.1, 1, 0.0]
+    initial-rotation: [0, 0, 0]
+    nodes: 20
+    E: 1e5
     diameter: 0.1
     length: 1
     nu: 0.3
@@ -29,14 +48,14 @@ objects:
   - 
     type: "Rod"
     name: "rod2"
-    initial-position: [-0.5, 1.3, 0.5]
+    initial-position: [-0.5, 1.4, 0.5]
     initial-rotation: [0, 90, 0]
-    nodes: 15
+    nodes: 20
     E: 1e6
     diameter: 0.1
     length: 1
     nu: 0.3
-    base-fixed: True
+    base-fixed: False
     tip-fixed: False
     render-type: "PBR"
     # orm-texture-filename: "../resource/textures/Metal050A_4K-PNG/Metal050A_4K-PNG_ORM.png"
