--- a/config/collision_test/box_rod.yaml
+++ b/config/collision_test/box_rod.yaml
@@ -1,4 +1,4 @@
-name: "Rod-Rod Collision"
+name: "Rod-Box Collision"
 # sim-mode: "Frame-by-frame"
 time-step: 1e-3
 end-time: 100
@@ -9,49 +9,26 @@ create-skybox: True
 
 objects:
   - 
-    type: "Rod"
-    name: "rod1"
-    initial-position: [-0.1, 1, 0.0]
-    initial-rotation: [0, 0, 0]
-    nodes: 20
-    E: 1e7
-    diameter: 0.1
-    length: 1
-    nu: 0.3
-    base-fixed: True
-    tip-fixed: True
+    type: "RigidBox"
+    name: "box1"
+    initial-position: [0, 1, 0]
+    initial-rotation: [0, 0, 10]
+    initial-angular-velocity: [0,0,0]
+    size: [0.5,0.5,0.5]
     render-type: "PBR"
     # orm-texture-filename: "../resource/textures/Metal050A_4K-PNG/Metal050A_4K-PNG_ORM.png"
     # base-color-texture-filename: "../resource/textures/Metal050A_4K-PNG/Metal050A_4K-PNG_Color.png"
     metallic: 0.2
     roughness: 0.5
     color: [1.0, 0.0, 0.0]
+    fixed: false
 
   - 
     type: "Rod"
     name: "rod1"
-    initial-position: [0.1, 1, 0.0]
-    initial-rotation: [0, 0, 0]
-    nodes: 20
-    E: 1e7
-    diameter: 0.1
-    length: 1
-    nu: 0.3
-    base-fixed: True
-    tip-fixed: True
-    render-type: "PBR"
-    # orm-texture-filename: "../resource/textures/Metal050A_4K-PNG/Metal050A_4K-PNG_ORM.png"
-    # base-color-texture-filename: "../resource/textures/Metal050A_4K-PNG/Metal050A_4K-PNG_Color.png"
-    metallic: 0.2
-    roughness: 0.5
-    color: [1.0, 0.0, 0.0]
-
-  - 
-    type: "Rod"
-    name: "rod2"
-    initial-position: [-0.5, 1.4, 0.5]
+    initial-position: [-0.5, 1.8, 0.05]
     initial-rotation: [0, 90, 0]
-    nodes: 50
+    nodes: 20
     E: 1e6
     diameter: 0.1
     length: 1
@@ -64,4 +41,3 @@ objects:
     metallic: 0.2
     roughness: 0.5
     color: [0.0, 0.0, 1.0]
-   
